--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.5.17",
     "vue-knob-control": "^1.2.1",
     "vue-material": "^1.0.0-beta-10.2",
+    "vue-range-slider": "^0.6.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
