--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-material": "^1.0.0-beta-10.2",
     "vue-range-slider": "^0.6.0",
     "vue-router": "^3.0.1",
+    "vue-slicksort": "^0.1.10",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
